src/objects/AcctSeed__Cash_Receipt__c.object
<CustomObject>
    <description>Used to document the money received from a customer. Typically matched to billing invoices in the cash application process to denote satisfactory payment of billing invoice by customer.</description>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Filtered Look up to Salesforce account based on Accounting Type.</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Customer, Customer and Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting.</inlineHelpText>
        <label>Accounting  Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Year__c</fullName>
        <formula>LEFT(  AcctSeed__Accounting_Period__r.Name  ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount_Number__c</fullName>
        <formula>AcctSeed__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <inlineHelpText>The amount of money received in a check or electronic deposit.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Applied_Amount__c</fullName>
        <inlineHelpText>The amount of the cash receipt that has been specifically allocated to customer billings.</inlineHelpText>
        <label>Applied Amount</label>
        <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Applied_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Cash_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Balance__c</fullName>
        <formula>AcctSeed__Amount__c - AcctSeed__Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cash Receipt Amount - Applied amount.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Upon posting a debit entry will be made to this GL account.</inlineHelpText>
        <label>Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Provides reference to the deposit of which the cash receipt is a part of if populated.</inlineHelpText>
        <label>Bank Deposit</label>
        <referenceTo>AcctSeed__Bank_Deposit__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Id__c</fullName>
        <externalId>true</externalId>
        <label>Bank Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Reconciliation_Date__c</fullName>
        <description>Associated Bank Reconciliation’s Statement Ending Date. Used by system’s query logic to determine which source records are uncleared as of a specific bank reconciliation’s statement ending date.</description>
        <formula>AcctSeed__Bank_Reconciliation__r.AcctSeed__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Statement Ending Date of the associated Bank Reconciliation.</inlineHelpText>
        <label>Bank Reconciliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated bank reconciliation this cash receipt was cleared.</inlineHelpText>
        <label>Bank Reconciliation</label>
        <referenceTo>AcctSeed__Bank_Reconciliation2__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Transaction</label>
        <referenceTo>AcctSeed__Bank_Transaction__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Flow_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to categorize records in Cash Flow Statement.</inlineHelpText>
        <label>Cash Flow Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Cash Receipts (Cash Flow Category)</relationshipLabel>
        <relationshipName>Cash_Receipts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cleared_Date__c</fullName>
        <description>Records the date the transaction was processed by the bank or credit card. Populated from the associated bank transaction record.</description>
        <inlineHelpText>The date this cash receipt was cleared in the associated bank reconciliation.</inlineHelpText>
        <label>Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the Unapplied Cash GL Account set on Accounting Settings if populated.</inlineHelpText>
        <label>Credit GL Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Expense</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Balance Sheet</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Revenue</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Cash Receipts (Credit GL Account)</relationshipLabel>
        <relationshipName>Cash_Receipts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Conversion_Rate__c</fullName>
        <inlineHelpText>The currency conversion rate for the currency.</inlineHelpText>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of GL Account Variable 1.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of GL Account Variable 2.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Cash Receipts (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Cash_Receipts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <infoMessage>The Accounting Variable must have a Type of GL Account Variable 3.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Cash Receipts (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Cash_Receipts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Amount__c</fullName>
        <formula>IF(ISBLANK(AcctSeed__Currency_Conversion_Rate__c) || AcctSeed__Currency_Conversion_Rate__c = 0,AcctSeed__Amount__c,AcctSeed__Amount__c/AcctSeed__Currency_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount normalized to the base currency. This is Amount divided by the Currency Conversion Rate.</inlineHelpText>
        <label>Ledger Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Number_of_Billing_Cash_Receipts__c</fullName>
        <label>Billings Applied To</label>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Cash_Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Reference__c</fullName>
        <inlineHelpText>Customer check number or electronic transaction reference.</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track a detailed component of Project.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Typically used to track customer engagements or events.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Purpose__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Receipt</fullName>
                    <default>true</default>
                    <label>Customer Receipt</label>
                </value>
                <value>
                    <fullName>Customer Prepayment</fullName>
                </value>
                <value>
                    <fullName>Vendor Refund</fullName>
                </value>
                <value>
                    <fullName>Other Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Receipt_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>The date cash was received.</inlineHelpText>
        <label>Receipt Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>A value of &quot;Posted&quot; indicates the record is final.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Form of payment received from the customer: ACH, Check, Credit Card, or Wire</description>
        <inlineHelpText>Form of payment received from the customer: ACH, Check, Credit Card, or Wire</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YayPay_Error_Message__c</fullName>
        <label>YayPay Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YayPay_Last_Sync_Date__c</fullName>
        <label>YayPay Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <label>Cash Receipt</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unapplied</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Balance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctSeed__Purpose__c</field>
            <operation>equals</operation>
            <value>Customer Prepayment</value>
        </filters>
        <label>Unapplied</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unposted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Posted</value>
        </filters>
        <label>Unposted</label>
    </listViews>
    <listViews>
        <fullName>Advance_payments</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Credit_GL_Account__c</field>
            <operation>contains</operation>
            <value>FAA</value>
        </filters>
        <label>Advance payments</label>
    </listViews>
    <listViews>
        <fullName>Applied_Prepayments</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Balance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctSeed__Purpose__c</field>
            <operation>equals</operation>
            <value>Customer Prepayment</value>
        </filters>
        <filters>
            <field>AcctSeed__Credit_GL_Account__c</field>
            <operation>equals</operation>
            <value>200-00-02-Advance Customer Payments</value>
        </filters>
        <label>Applied Prepayments</label>
    </listViews>
    <listViews>
        <fullName>UnPosted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved,In Process</value>
        </filters>
        <label>UnPosted</label>
    </listViews>
    <listViews>
        <fullName>Unapplied_Prepayments</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Balance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctSeed__Purpose__c</field>
            <operation>equals</operation>
            <value>Customer Prepayment</value>
        </filters>
        <filters>
            <field>AcctSeed__Applied_Amount__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unapplied Prepayments</label>
    </listViews>
    <listViews>
        <fullName>Wire</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Type__c</field>
            <operation>equals</operation>
            <value>Wire</value>
        </filters>
        <label>Wire</label>
    </listViews>
    <listViews>
        <fullName>YayPay</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>YayPay_Last_Sync_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>YayPay</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cash Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Balance_Must_Be_Positive</fullName>
        <active>true</active>
        <description>The balance must always greater than 0</description>
        <errorConditionFormula>ROUND(AcctSeed__Balance__c,2) &lt; 0</errorConditionFormula>
        <errorMessage>The cash receipt balance cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Cash_Receipt_Can_Not_be_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>AcctSeed__Amount__c &lt;0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Amount__c</errorDisplayField>
        <errorMessage>A cash receipt can not be for a negative amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__GL_Account_Variable_3_Correct_Type</fullName>
        <active>false</active>
        <description>Ensures the GL Account Variable 3 field is of type GL Account Variable 3</description>
        <errorConditionFormula>NOT(ISBLANK( AcctSeed__GL_Account_Variable_3__c )) &amp;&amp; TEXT(AcctSeed__GL_Account_Variable_3__r.AcctSeed__Type__c) != &quot;GL Account Variable 3&quot;</errorConditionFormula>
        <errorDisplayField>AcctSeed__GL_Account_Variable_3__c</errorDisplayField>
        <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 3&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__GL_Account_Variable_4_Correct_Type</fullName>
        <active>false</active>
        <description>Ensures the GL Account Variable 4 field is of type GL Account Variable 4</description>
        <errorConditionFormula>NOT(ISBLANK( AcctSeed__GL_Account_Variable_4__c )) &amp;&amp; TEXT(AcctSeed__GL_Account_Variable_4__r.AcctSeed__Type__c) != &quot;GL Account Variable 4&quot;</errorConditionFormula>
        <errorDisplayField>AcctSeed__GL_Account_Variable_4__c</errorDisplayField>
        <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 4&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Prevent_associating_with_Bank_Deposit</fullName>
        <active>true</active>
        <description>Ensures that the user cannot associate records with dates that are after the Bank Deposit&apos;s Deposit Date. Deactivating this validation rule is likely to cause integrity issues with calculations on Bank Reconciliations.</description>
        <errorConditionFormula>AND(NOT(ISNULL(AcctSeed__Bank_Deposit__c)), AcctSeed__Receipt_Date__c &gt; AcctSeed__Bank_Deposit__r.AcctSeed__Deposit_Date__c)</errorConditionFormula>
        <errorMessage>You cannot associate records with dates that are after this Bank Deposit&apos;s Deposit Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeed__Project__c)) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A project task is required if a project is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__SameBankGLAccountAndCreditGLAccount</fullName>
        <active>true</active>
        <description>The Bank GL Account and the Credit GL Account cannot be set to the same GL Account. Disabling this validation rule can lead to balance discrepancies in your Bank Reconciliation. Accounting Seed recommends this validation rule is not disabled.</description>
        <errorConditionFormula>AcctSeed__Bank_Account__c = AcctSeed__Credit_GL_Account__c</errorConditionFormula>
        <errorMessage>You cannot set the Bank GL Account and the Credit GL Account fields to the same GL Account.</errorMessage>
    </validationRules>
</CustomObject>